--- a/index2.html
+++ b/index2.html
@@ -84,7 +84,7 @@
                                 </button>
 
                                 <hr class="my-4">
-                                <p>Have an account? <a href="login.html" class="link-to-login">Login</a></p>
+                                <p>Have an account? <a href="index.html" class="link-to-login">Login</a></p>
                             </section> <!--form section-->
                         </form> <!--form-->
                     </section>
