--- a/index2.html
+++ b/index2.html
@@ -38,7 +38,9 @@
                                           </div>
                                           <div class="invalid-feedback">
                                           <!--  Enter Full Name Here. -->
-                                          </div>
+                                          </div> </div>
+      
+
                                     
                                 <div class="form-label-group">
                                         <input type="username" id="inputUsername" class="form-control" placeholder="Username" required autofocus>
